# wechat-sdk

./: .gitignore  DEVELOPMENT.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
wechat_publisher/: html_utils.py
wechat_sdk/: README.md  __init__.py  article_types.py  core.py  exceptions.py  html_utils.py  image.py  markdown_utils.py
