[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-publisher"
version = "0.1.1"
authors = [
    {name = "penxxy", email = "mkhu3638@gmail.com"},
]
description = "微信公众号开发 SDK - 支持文章发布、图片上传等功能"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["wechat", "publisher", "sdk", "微信公众号"]
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "Pillow>=8.0.0",
    "markdown>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
]

[project.urls]
Homepage = "https://github.com/penxxy/wechat-publisher"
Repository = "https://github.com/penxxy/wechat-publisher"
Issues = "https://github.com/penxxy/wechat-publisher/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["wechat_publisher*"]
exclude = ["tests*"] 